k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-book
  labels:
    app.kubernetes.io/name: backend-book
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend-book
  ports:
    - name: http
      port: 80
      targetPort: http
